--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
     if not in a Git repository.</p>
 <b>git rev-parse --is-inside-work-tree: </b>
 <br>
-<p>Add new feature.</p>
+<p>Add new feature.(Add Dropdown)</p>
