Clear all changes

--- a/index.html
+++ b/index.html
@@ -3,3 +3,6 @@
     repository; otherwise, it will return nothing or an error
     if not in a Git repository.</p>
 <b>git rev-parse --is-inside-work-tree: </b>
+<br>
+
+<p>Add new feature.(Add Dropdown)</p>
